; ModuleID = '/home/carl/AnghaBench/darwin-xnu/SETUP/config/extr_openp.c_fopenp.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/SETUP/config/extr_openp.c_fopenp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ftyp = common dso_local global i8* null, align 8
@ffunc = common dso_local global i32 0, align 4
@fvalue = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @fopenp(i8* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  %10 = load i8*, i8** %9, align 8
  store i8* %10, i8** @ftyp, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = load i32, i32* @ffunc, align 4
  %15 = call i64 @searchp(i8* %11, i8* %12, i8* %13, i32 %14)
  %16 = icmp slt i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %4
  store i32* null, i32** %5, align 8
  br label %20

18:                                               ; preds = %4
  %19 = load i32*, i32** @fvalue, align 8
  store i32* %19, i32** %5, align 8
  br label %20

20:                                               ; preds = %18, %17
  %21 = load i32*, i32** %5, align 8
  ret i32* %21
}

declare dso_local i64 @searchp(i8*, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
